--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -81,6 +81,11 @@
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page172Problem19.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page178SelfTest07.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ActualShadedAreaProblem.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 1\Page1Col1Prob3.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 1\Page1Col1Prob2.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 2\TesterForCircleTriangle.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 2\Page2Col1Prob3.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 2\Page2Col1Prob1.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\CircCircRegionTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\CircCircCircRegionTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\ContainmentTester.cs" />
@@ -89,33 +94,40 @@
     <Compile Include="Problems\ShadedAreaProblems\For Testing\BasicInteriorPolygonTester2.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\BasicPathologicalPolygonTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\ThreeCircleTwoOverlapTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col1Prob5.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 1\Page1Col1Prob5.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\RegularPolygonCrushingTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\FilamentTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2Prob16.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2prob18.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2prob17.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2Prob15.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page2Col2Prob2.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page2Col2Prob1.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col1Prob1.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col2Prob3.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col2Prob2.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col2Prob1.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 2\Page2Prob19.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 2\Page2Prob16.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 2\Page2Prob18.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 2\Page2Prob17.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 2\Page2Prob15.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 2\Page2Col2Prob2.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 2\Page2Col2Prob1.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 1\Page1Col1Prob1.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 1\Page1Col2Prob3.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 1\Page1Col2Prob2.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 1\Page1Col2Prob1.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\PathologicalTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page2Col1Prob2.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2Prob20.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob21.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob22.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob23.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob24.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob25.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob26.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 2\Page2Col1Prob2.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 2\Page2Prob20.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 3\Page3Prob21.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 3\Page3Prob22.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 3\Page3Prob23.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 3\Page3Prob24.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 3\Page3Prob25.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 3\Page3Prob26.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob17.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob18.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob7.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob8.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ShadedAreaProblems.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Singapore\Page199.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Singapore\Page210.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Singapore\Page209.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Singapore\Page208.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Singapore\Page207.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Singapore\Page205.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Problems\ActualProblem.cs" />
     <Compile Include="StatisticsGenerator\ProofProblemFigureStatisticsAggregator.cs" />
