--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -50,9 +50,21 @@
     <Compile Include="MainProgram.cs" />
     <Compile Include="Obsolete\PebblerHypergraph.cs" />
     <Compile Include="Problems\ProofProblems\ActualProofProblem.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\AngleArcProblems.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test01.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test02.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test03.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test04.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test05.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test06.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test07.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test08.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test09.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test10.cs" />
     <Compile Include="Problems\ProofProblems\CirclesProblem.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page296Theorem7_1.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page296Theorem7_1_Test2.cs" />
+    <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page296Theorem7_1_Test3.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page306Theorem7_4_1.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page306Theorem7_4_1_Semicircle.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page307Theorem7_5.cs" />
