--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Problems\ProofProblems\AngleArc Problems\Test08.cs" />
     <Compile Include="Problems\ProofProblems\AngleArc Problems\Test09.cs" />
     <Compile Include="Problems\ProofProblems\AngleArc Problems\Test10.cs" />
+    <Compile Include="Problems\ProofProblems\AngleArc Problems\Test11.cs" />
     <Compile Include="Problems\ProofProblems\CirclesProblem.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page296Theorem7_1.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page296Theorem7_1_Test2.cs" />
