Updates for Victoria I

--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page 1\Page1Col1Prob5.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\RegularPolygonCrushingTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\FilamentTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 2\Page2Prob28.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 2\Page2Prob19.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 2\Page2Prob16.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 2\Page2Prob18.cs" />
@@ -130,10 +131,38 @@
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 3\Page3Prob24.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 3\Page3Prob25.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 3\Page3Prob26.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob17.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob18.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob7.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob8.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 4\Page4Prob19.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 4\Page4Prob14.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 4\Page4Prob13.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 4\Page4Prob17.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 4\Page4Prob18.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 4\Page4Prob7.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page 4\Page4Prob8.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row1Prob24.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row1Prob25.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row1Prob26.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row2Prob27.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row2Prob28.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row3Prob2.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row3Prob3.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row3Prob4.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row5Prob17.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row5Prob18.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 5\Page5Row6Prob19.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 6\Page6Prob26.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 6\Page6Prob28.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 6\Page6Prob29.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 6\Page6Prob30.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 6\Page6Prob31.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 6\Page6Prob32a.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 6\Page6Prob32b.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 6\Page6Prob32c.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 6\Page6Prob4.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 6\Page6Prob6.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 7\Page7Prob1.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 7\Page7Prob26.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 7\Page7Prob3.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\McDougall\Page 7\Page7Prob4.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ShadedAreaProblems.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Singapore\Page199.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Singapore\Page210.cs" />
