--- a/Main/SilverlightClient/SilverlightClient.2010.csproj
+++ b/Main/SilverlightClient/SilverlightClient.2010.csproj
@@ -164,6 +164,9 @@
     <Resource Include="..\DynamicGeometryLibrary\Resources\Trash.png">
       <Link>Trash.png</Link>
     </Resource>
+    <Resource Include="..\DynamicGeometryLibrary\Resources\draw.png">
+      <Link>draw.png</Link>
+    </Resource>
     <Content Include="ServiceReferences.ClientConfig" />
   </ItemGroup>
   <ItemGroup>
