General Update for syncing; atomic region fix.

--- a/Main/GeometryTutorLib/GeometryTutorLib.csproj
+++ b/Main/GeometryTutorLib/GeometryTutorLib.csproj
@@ -112,7 +112,6 @@
     <Compile Include="ConcreteAST\Equations\GeometricArcEquation.cs" />
     <Compile Include="ConcreteAST\Equations\NumericValue.cs" />
     <Compile Include="ConcreteAST\Figures\ConcavePolygon.cs" />
-    <Compile Include="ConcreteAST\Figures\ImaginaryPoint.cs" />
     <Compile Include="ConcreteAST\Figures\Polygon.cs" />
     <Compile Include="AtomicRegions\AtomicRegion.cs" />
     <Compile Include="Area-Based Analyses\General Area Hypergraph\AreaPowersetHypergraph.cs" />
@@ -151,6 +150,24 @@
     <Compile Include="ConcreteAST\Figures\Quadrilaterals\Parallelogram.cs" />
     <Compile Include="ConcreteAST\Figures\Quadrilaterals\Quadrilateral.cs" />
     <Compile Include="EngineUIBridge\HypergraphWrapper.cs" />
+    <Compile Include="FigureSynthesizer\Angle.cs" />
+    <Compile Include="FigureSynthesizer\FigureSynthesizerMain.cs" />
+    <Compile Include="FigureSynthesizer\EquilateralTriangle.cs" />
+    <Compile Include="FigureSynthesizer\Segment.cs" />
+    <Compile Include="FigureSynthesizer\Figure.cs" />
+    <Compile Include="FigureSynthesizer\IsoscelesTrapezoid.cs" />
+    <Compile Include="FigureSynthesizer\IsoscelesTriangle.cs" />
+    <Compile Include="FigureSynthesizer\Kite.cs" />
+    <Compile Include="FigureSynthesizer\Parallelogram.cs" />
+    <Compile Include="FigureSynthesizer\Point.cs" />
+    <Compile Include="FigureSynthesizer\Polygon.cs" />
+    <Compile Include="FigureSynthesizer\Quadrilateral.cs" />
+    <Compile Include="FigureSynthesizer\Rectangle.cs" />
+    <Compile Include="FigureSynthesizer\Rhombus.cs" />
+    <Compile Include="FigureSynthesizer\RightTriangle.cs" />
+    <Compile Include="FigureSynthesizer\Square.cs" />
+    <Compile Include="FigureSynthesizer\Trapezoid.cs" />
+    <Compile Include="FigureSynthesizer\Triangle.cs" />
     <Compile Include="HardCoded\Problems\ActualProblem.cs" />
     <Compile Include="HardCoded\Problems\ProofProblems\ActualProofProblem.cs" />
     <Compile Include="HardCoded\Problems\ProofProblems\AngleArc Problems\AngleArcProblems.cs" />
@@ -382,6 +399,7 @@
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\For Testing\CircCircCircRegionTester.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\For Testing\CircCircRegionTester.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\For Testing\ContainmentTester.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\For Testing\FailingCircCircRegionTester.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\For Testing\FilamentTester.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\For Testing\PathologicalTester.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\For Testing\RegularPolygonCrushingTester.cs" />
