--- a/Main/GeometryTutorLib/GeometryTutorLib.csproj
+++ b/Main/GeometryTutorLib/GeometryTutorLib.csproj
@@ -671,6 +671,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EngineUIBridge\Relationship.cs" />
     <Compile Include="UIDebugPublisher.cs" />
+    <Compile Include="UIProblemDrawer.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup />
