Finished SynthesizedProblemWindow. Input is bundled into a dictionary, but still needs to be passed to the back end once the functionality is available.

--- a/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
+++ b/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
@@ -331,6 +331,7 @@
     <Compile Include="UI\GivenWindow\AddSimilarTriangles.cs" />
     <Compile Include="UI\IconBuilder.cs" />
     <Compile Include="UI\ManageGivensWindow.cs" />
+    <Compile Include="UI\NumericTextBox.cs" />
     <Compile Include="UI\ParseDisambiguationWindow.cs" />
     <Compile Include="UI\ParseGroup.cs" />
     <Compile Include="UI\ParseGroupWindow.cs" />
